# numerics

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp  numerics_constants.hpp  numerics_functions.hpp  numerics_mpi.hpp  numerics_omp.hpp
BSAM/: numerics_BSAM.hpp  numerics_BSAM_edge.hpp  numerics_BSAM_point.hpp  numerics_BSAM_tile.hpp  numerics_point_deque.hpp
NM/: numerics_NM.hpp
cubature/: CMakeLists.txt  COPYING.md  LICENSE.md  README.md  cubature.h  hcubature.c  numerics_cubature.hpp  numerics_cubature_defaults.cpp  numerics_cubature_function_compactify.hpp  numerics_cubature_function_nested_integral.hpp  numerics_cubature_function_spherical_integral.hpp
functions/DLi/: DLi.hpp  DLi_0.hpp  DLi_2.hpp  DLi_4.hpp  DLi_6.hpp
matplotlib-cpp/: matplotlibcpp.cmake
test/: .gitignore  CMakeLists.txt
test/BSAM/: BSAM.cpp  BSAM_plot.py  heaviside_lvl_5.json  mandelbrot_lvl_0.json  mandelbrot_lvl_1.json  mandelbrot_lvl_2.json
test/DLi/: DLi.cpp
test/NM/: NM.cpp
test/cubature_function/: cubature_function.cpp  cubature_function_integrals.nb
test/matplotlibcpp/: matplotlibcpp.cpp
